--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ legend {
 }
 
 
-.product-item span,
+.product-item del,
 .product-item .price {
 	font-size: 17px;
 	line-height: 18px;
@@ -243,7 +243,7 @@ legend {
 	text-transform: uppercase;
 }
 
-.product-item span {
+.product-item del {
 	color: #999999;
 }
 
@@ -354,7 +354,6 @@ legend {
 	background-color: #ee3643;
 	color: #fff;
 	border-bottom: 5px solid #b52933;
-	text-align: center;
 }
 
 .footer-top p {
