--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ img {
 }
 
 .container {
-	width: 940px;
+	width: 960px;
 	margin: 0 auto;
 	padding: 0 10px;
 }
@@ -173,11 +173,11 @@ img {
 }
 
 .search-btn {
-	width: 17px;
-	height: 17px;
+	width: 42px;
+	height: 42px;
 	position: absolute;
-	top: 12px;
-	left: 17px;
+	top: 6px;
+	left: 0;
 	z-index: 3;
 	border: none;
 	background: transparent;
@@ -185,6 +185,12 @@ img {
 	outline: none;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
+}
+
+.search-icon {
+	width: 17px;
+	height: 17px;
 }
 
 .bookmark-link,
