--- a/css/styles.css
+++ b/css/styles.css
@@ -266,10 +266,11 @@ input[type="radio"].visually-hidden {
 }
 
 .page-title {
-	width: 196px;
-	height: 60px;
+	width: 300px;
 	margin: 0;
-	margin-right: 71px;
+	margin-right: 20px;
+	padding-left: 54px;
+	padding-right: 51px;
 	color: #ee3643;
 	font-size: 16px;
 	line-height: 23px;
@@ -277,16 +278,21 @@ input[type="radio"].visually-hidden {
 	font-weight: 400;
 }
 
+.navigation-contacts {
+	display: flex;
+	flex-direction: column;
+	margin-right: 68px;
+}
+
 .phone-number {
 	position: relative;
 
-	width: 144px;
-	padding: 8px 52px 7px 74px;
+	width: 270px;
+	padding: 8px 45px 7px 74px;
 	color: #ee3643;
 	font-size: 21px;
 	line-height: 21px;
 	border: 3px solid #fff;
-	margin-right: 69px;
 }
 
 .phone-number::before {
@@ -303,9 +309,12 @@ input[type="radio"].visually-hidden {
 }
 
 .address {
+	width: 250px;
 	color: #32425c;
 	font-size: 14px;
 	line-height: 24px;
+	margin: 0;
+	margin-left: 10px;
 }
 
 .user-link {
@@ -314,7 +323,7 @@ input[type="radio"].visually-hidden {
 	font-size: 21px;
 	line-height: 21px;
 	background-color: #fff;
-	padding: 11px 27px 10px 48px;
+	padding: 12px 32px 12px 50px;
 }
 
 .user-link::before {
@@ -338,13 +347,17 @@ input[type="radio"].visually-hidden {
 	color: rgba(0, 0, 0, 0.3);
 }
 
+.login-link {
+	margin-right: ;
+}
+
 .registration-link {
 	color: #000;
 	font-size: 21px;
 	line-height: 21px;
 	background-color: #fff;
-	margin-right: 10px;
-	padding: 11px 25px 10px 25px;
+	margin-left: 10px;
+	padding: 12px 24px 12px 24px;
 }
 
 .registration-link::before {
